@@ -1,3 +1,9 @@
+2007-05-16 [iwkse]	0.4.0cvs3
+
+	* src/poppler_viewer.h
+	* src/poppler_viewer.c
+			Add a Tooltip for icon_type
+
 2007-05-16 [iwkse]	0.4.0cvs2
 
 	* src/poppler_viewer.h
